# cxx-case-convert

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  appveyor.yml
include/case-convert/: convert.hpp
src/: CMakeLists.txt  convert.cpp
test/: CMakeLists.txt  test.cpp
